--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Flask==2.0.1
+Flask==2.1.0
+Flask-Cors==3.0.10
+Flask-MySQLdb==0.2.0
 mysql-connector-python==8.0.27
-flask-cors==3.0.10
-bcrypt==3.2.0
+Flask-Bcrypt==0.7.1
+Werkzeug==2.0.1
