--- a/db.config
+++ b/db.config
@@ -1,6 +1,6 @@
 {
-    "host":"localhost",
+    "host":"mysql",
     "user":"root",
-    "password":"Rohan@91196",
+    "password":"root",
     "database":"pmt"
 }
