--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==2.1.0
-Flask-Cors==3.0.10
-Flask-MySQLdb==0.2.0
-mysql-connector-python==8.0.27
-Flask-Bcrypt==0.7.1
-Werkzeug==2.0.1
+Flask
+Flask-Cors
+Flask-MySQLdb
+mysql-connector-python
+Flask-Bcrypt
+Werkzeug
