changes in login api

--- a/db.config
+++ b/db.config
@@ -1,6 +1,6 @@
 {
-    "host":"mysql",
+    "host":"localhost",
     "user":"root",
-    "password":"root",
+    "password":"Rohan@91196",
     "database":"pmt"
 }
