--- a/db.config
+++ b/db.config
@@ -1,5 +1,5 @@
 {
-    "host":"http://mysql-rohanbhavsar215-dev.apps.sandbox-m4.g2pi.p1.openshiftapps.com",
+    "host":"mysql",
     "user":"root",
     "password":"root",
     "database":"pmt"
