--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 Flask==2.0.2
 Flask-Cors==3.0.10
-Flask-MySQLdb==0.2.0
-mysql-connector-python==8.0.26 --hash=sha256:547b16542fa7eae657c48bae0b126a5757cda5d1e8356139f4514f1cc6efbde3
+mysql-connector-python==8.0.26
 Flask-Bcrypt==0.7.1
 Werkzeug==2.0.2
 PyJWT==2.1.0
