--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 Flask==2.0.2
 Flask-Cors==3.0.10
 pymysql==1.0.2
-pymysqlpool==0.9.2
 Flask-Bcrypt==0.7.1
 Werkzeug==2.0.2
 PyJWT==2.1.0
-dbutils==2.0.0
+dbutils
